On branch ai-img  Changes to be committed: 	modified:   .gitignore 	new file:   README.md 	modified:   controller.js 	new file:   imageClassification.js 	modified:   package-lock.json 	modified:   package.json 	new file:   predict.py 	modified:   public/css/styles.css 	new file:   requirements.txt 	new file:   testAI.js 	modified:   views/imagePredict.ejs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10766,6 +10766,19 @@ header.masthead .post-heading .meta a {
   text-align: center;
 }
 
+.info {
+/*  color:red;*/
+  border: 1rem dashed lightblue;
+  font-family: monospace;
+  font-size: 0.875rem;
+  font-style: italic;
+  display: block;
+  margin: 1rem;
+  padding: 0.625rem;
+  text-align: center;
+  
+}
+
 .post-preview > a {
   color: #212529;
 }
