Add Quan's beeaklarmed model to da web!!!! some extra error handling for the img upload stage  On branch ai-img2 	modified:   .gitignore 	modified:   controller.js 	new file:   driver.py 	new file:   file_watcher.py 	deleted:    models/ProductInformationModel.js 	deleted:    predict.py 	new file:   predictBee.py 	new file:   public/output/.gitignore 	modified:   requirements.txt 	modified:   views/imagePredict.ejs

--- a/views/imagePredict.ejs
+++ b/views/imagePredict.ejs
@@ -35,7 +35,7 @@
     <% if (response.predict !== null) { %>
                     <p><%= response.predict %></p>
     <% } %>
-                    <img src="/upload/<%= encodeURIComponent(response.img) %>" style="max-width:100%">
+                    <img src="/output/<%= encodeURIComponent(response.img) %>" style="max-width:100%">
                     <div class="my-5">
                     </div>
                 </div>
