Do a bunch of stuffs: * Add YOLOv7 Detection (better than OpenCV) + fallback if YOLO cannot load * Finally, FINALLY, finalized the web navigation, add the about page, home page now show past predictions * Update the README.md to show better documentaion * Add some better error handling + fix bugs * Realized that I am bad at commiting         modified:   .gitignore         modified:   ExampleModels/.gitignore         modified:   README.md         modified:   controller.js         modified:   driver.py         modified:   file_watcher.py         modified:   predictBee.py         new file:   public/assets/img/howto.webp         modified:   public/css/styles.css         modified:   router.js         deleted:    traced_model.pt         modified:   views/about.ejs         modified:   views/imagePredict.ejs         modified:   views/index.ejs         modified:   views/layouts/navbar.ejs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3819,6 +3819,9 @@ textarea.form-control-lg {
     padding: 0;
     overflow-y: visible;
   }
+  .navbar {
+    display: contents;
+  }
 }
 @media (min-width: 768px) {
   .navbar-expand-md {
@@ -3858,7 +3861,7 @@ textarea.form-control-lg {
     transition: none;
   }
   .navbar-expand-md .offcanvas .offcanvas-header {
-    display: none;
+    display: block;
   }
   .navbar-expand-md .offcanvas .offcanvas-body {
     display: flex;
@@ -3912,6 +3915,9 @@ textarea.form-control-lg {
     flex-grow: 0;
     padding: 0;
     overflow-y: visible;
+  }
+  .navbar {
+    display: flex;
   }
 }
 @media (min-width: 1200px) {
