--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,8 +10,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <h1>About Us</h1>
+                            <span class="subheading">This is what we do.</span>
                         </div>
                     </div>
                 </div>
@@ -22,49 +22,21 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>Source code vailable @ <a href="https://github.com/WataNekko/aiot-beehive/site">https://github.com/WataNekko/aiot-beehive/site</a> (Probably) </p>
+                        <p>We are:
+		                <ul>
+					        <li> <a href="mailto:18875@student.vgu.edu.vn"> Quan Nguyen Le Anh.</a></li>
+				            <li> <a href="mailto:18874@student.vgu.edu.vn"> Son Nguyen Thanh.</a></li>
+					        <li> <a href="mailto:17197@student.vgu.edu.vn"> Chuong Tran Ngoc Duy.</a></li>
+                        </ul>
+                        </p>
+                        <p>Quick start Guide:
+                            <a target="_blank" href="/assets/img/howto.webp"><img class="img-fluid" src="/assets/img/howto.webp" alt="..." > </a>
+                        </p>
                     </div>
                 </div>
             </div>
         </main>
-        <!-- Footer-->
-        <footer class="border-top">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
-                    </div>
-                </div>
-            </div>
-        </footer>
         <!-- Footer-->
         <%- include('layouts/footer'); -%>
         <%- include('layouts/scripts'); -%>>
